# tynabot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
nginx/: nginx.conf
tynabot/: main.py
