[tool.poetry]
name = "tynabot"
version = "6.6.6"
description = "the world's snarkiest rest api"
authors = ["bsnacks000 <bsnacks000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
